--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./css/tailwind.css -o ./css/main.css --watch",
     "dev": "npm run watch:css"
   },
-  "author": "",
+  "author": "Ali Rezaei Afshar",
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/line-clamp": "^0.1.0",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.18",
     "tailwindcss": "^3.4.17"
   }
 }
